--- a/style.css
+++ b/style.css
@@ -1,29 +1,111 @@
-/* The navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: rgb(0, 0, 255);
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+body{
+    font-family: sans-serif;
 }
 
-/* Links inside the navbar */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+nav{
+    background: rgb(23, 25, 29);
+    height: 80px;
+    width: 100%;
+}
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
 
-/* Change background on mouse-over */
-.navbar a:hover {
-  background: #ddd;
-  color: black;
+nav ul{ 
+    float: right;
+    margin-right: 20px;
 }
 
-/* Main content */
-.main {
-  margin-top: 30px; /* Add a top margin to avoid content overlay */
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    text-decoration: uppercase;
+}
+
+a.active,a:hover{
+  background: #1b9bff;
+  transition: .5s;  
+
+}
+
+section.me {
+    
+    color: white;
+    width: 100%;
+    padding: 0 7%;
+    display: table;
+    margin: 0;
+    max-width: none;
+    background-color: #373B44;
+    height: 90vh;
+
+    /* background-image: url("image.jpeg"); */
+    /* filter: brightness(10%); */
+}
+
+section.me:after {
+    content: "";
+    position: fixed;
+    top: 0; bottom: 0; left: 0; right: 0; 
+    background: rgba(0,0,0,0.1);
+    pointer-events: none;
+  }
+img {
+    margin-left: 10%;
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
+    /* filter: brightness(10%); */
+    
+}
+
+.home {
+    margin-top: 10%;
+    margin-left: 30%;
+}
+
+.about {
+    float: right;
+}
+
+
+section {
+    
+    color: white;
+    width: 100%;
+    padding: 0 7%;
+    display: table;
+    margin: 0;
+    max-width: none;
+    /* background-color: #373B44; */
+    
+    background-color: rgb(76, 73, 221);
+    height: 90vh;
+    ;
+
+    /* background-image: url("image.jpeg"); */
+}
+
+.about {
+    padding-top: 10%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
