--- a/style.css
+++ b/style.css
@@ -56,19 +56,13 @@ section.me {
     margin: 0;
     max-width: none;
     background-color: #373B44;
-    height: 90vh;
+    height: 100vh;
 
     /* background-image: url("image.jpeg"); */
     /* filter: brightness(10%); */
 }
 
-section.me:after {
-    content: "";
-    position: fixed;
-    top: 0; bottom: 0; left: 0; right: 0; 
-    background: rgba(0,0,0,0.1);
-    pointer-events: none;
-  }
+
 img {
     margin-left: 10%;
     border-radius: 50%;
@@ -79,7 +73,7 @@ img {
 }
 
 .home {
-    margin-top: 10%;
+    margin-top: 15%;
     margin-left: 30%;
 }
 
@@ -88,7 +82,7 @@ img {
 }
 
 
-section {
+section.about {
     
     color: white;
     width: 100%;
@@ -110,3 +104,14 @@ section {
     padding-left: 20%;
     padding-right: 20%;
 }
+
+.foot {
+    /* position: fixed; */
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    background: rgb(23, 25, 29);
+    color: white;
+    text-align: center;
+  }
