--- a/style.css
+++ b/style.css
@@ -1,117 +1,91 @@
-*{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-body{
-    font-family: sans-serif;
-}
-
-nav{
-    position: fixed;
-    background: rgb(23, 25, 29);
-    height: 80px;
-    width: 100%;
-}
-label.logo{
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-}
-
-nav ul{ 
-    float: right;
-    margin-right: 20px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-
-nav ul li a{
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    text-decoration: uppercase;
-}
-
-a.active,a:hover{
-  background: #1b9bff;
-  transition: .5s;  
+body {
+background-color: gray;
 
 }
 
-section.me {
-    
-    color: white;
-    width: 100%;
-    padding: 0 7%;
-    display: table;
-    margin: 0;
-    max-width: none;
-    background-color: #373B44;
-    height: 100vh;
+h1 {
+text-align: center;
+}
 
-    /* background-image: url("image.jpeg"); */
-    /* filter: brightness(10%); */
+.nan {
+float: left;
+width: 400px;
+margin: 20px;
+border: 1px solid black;
+/* padding: 9px; */
+padding-top: 0px;
+
+}
+.nan1 {
+float: left;
+width: 400px;
+margin: 20px;
+border: 1px solid black;
+/* padding: 9px; */
+padding-top: 0px;
+
+}
+.one {
+padding-top:0px;
+margin-top: 0px;
+border: 1px solid black;
+background-color: blue;
+width: 100px;
+float: right;
+}
+.two {
+padding-top:0px;
+margin-top: 0px;
+border: 1px solid black;
+background-color: yellow;
+width: 100px;
+float: right;
+}
+.three {
+padding-top:0px;
+margin-top: 0px;
+border: 1px solid black;
+background-color: orange;
+width: 100px;
+float: right;
+}
+
+p {
+clear: both;
+padding: 5px;
 }
 
 
-img {
-    margin-left: 10%;
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    /* filter: brightness(10%); */
-    
+@media screen and (min-width:992px) {
+body {
+/* width: 100%; */
+background-color: red;
+}
 }
 
-.home {
-    margin-top: 15%;
-    margin-left: 30%;
+@media screen and (max-width:991px) {
+body {
+    background-color: blue;
 }
 
-.about {
-    float: right;
+.nan {
+width: 400px;
+}
+.nan1 {
+width: 850px;
+/* clear: both; */
+}
 }
 
-
-section.about {
-    
-    color: white;
-    width: 100%;
-    padding: 0 7%;
-    display: table;
-    margin: 0;
-    max-width: none;
-    /* background-color: #373B44; */
-    
-    background-color: rgb(76, 73, 221);
-    height: 90vh;
-    ;
-
-    /* background-image: url("image.jpeg"); */
+@media screen and (max-width:767px) {
+body {
+    background-color: yellow;
 }
 
-.about {
-    padding-top: 10%;
-    padding-left: 20%;
-    padding-right: 20%;
+.nan {
+width: 400px;
 }
-
-.foot {
-    /* position: fixed; */
-    left: 0;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-    background: rgb(23, 25, 29);
-    color: white;
-    text-align: center;
-  }
+.nan1 {
+width: 400px;
+}
+}
