--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ margin: 20px;
 border: 1px solid black;
 /* padding: 9px; */
 padding-top: 0px;
+background-color: gray;
 
 }
 .nan1 {
@@ -23,6 +24,7 @@ margin: 20px;
 border: 1px solid black;
 /* padding: 9px; */
 padding-top: 0px;
+background-color: gray;
 
 }
 .one {
