--- a/style.css
+++ b/style.css
@@ -1,93 +1,169 @@
-body {
-background-color: gray;
-
+* {
+box-sizing: border-box;
 }
 
 h1 {
 text-align: center;
+
+}
+.container {
+border: none;
+margin-top: 10px;
+margin-bottom: 10px;
+margin-left: auto;
+margin-right: auto;
+padding: 10px;
+float: left;
 }
 
-.nan {
-float: left;
-width: 400px;
-margin: 20px;
+section {
+width: 100%;
+height: 225px;
 border: 1px solid black;
-/* padding: 9px; */
 padding-top: 0px;
 background-color: gray;
+color: white;
+font-family: sans-serif;
 
-}
-.nan1 {
-float: left;
-width: 400px;
-margin: 20px;
-border: 1px solid black;
-/* padding: 9px; */
-padding-top: 0px;
-background-color: gray;
 
-}
-.one {
-padding-top:0px;
-margin-top: 0px;
-border: 1px solid black;
-background-color: blue;
-width: 100px;
-float: right;
-}
-.two {
-padding-top:0px;
-margin-top: 0px;
-border: 1px solid black;
-background-color: yellow;
-width: 100px;
-float: right;
-}
-.three {
-padding-top:0px;
-margin-top: 0px;
-border: 1px solid black;
-background-color: orange;
-width: 100px;
-float: right;
 }
 
 p {
-clear: both;
 padding: 5px;
+margin: 0;
+}
+
+#beef {
+border: 1px solid black;
+text-align: center;
+width: 30%;
+margin-left: 70%;
+font-family: Georgia,sans-serif;
+font-weight: bold;
+font-size: 125%;
+margin-bottom: 0;
+margin-top: 0;
+padding: 5px;
+background-color: #FF1439;
+}
+
+#chicken {
+border: 1px solid black;
+text-align: center;
+width: 30%;
+margin-left: 70%;
+font-family: Georgia,sans-serif;
+font-weight: bold;
+font-size: 125%;
+color: black;
+margin-bottom: 0;
+margin-top: 0;
+padding: 5px;
+background-color: #FFFF00;
+
+}
+#sushi {
+border: 1px solid black;
+text-align: center;
+width: 30%;
+margin-left: 70%;
+font-family: Georgia,sans-serif;
+font-weight: bold;
+font-size: 125%;
+margin-bottom: 0;
+margin-top: 0;
+background-color: skyblue;
+color: black;
+padding: 5px;
+}
+.row {
+width: 100%;
 }
 
 
 @media screen and (min-width:992px) {
-body {
-/* width: 100%; */
-background-color: red;
-}
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+  }
+
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 
-@media screen and (max-width:991px) {
-body {
-    background-color: blue;
+@media screen and(min-width:768px) and (max-width:991px) {
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
+
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
 }
 
-.nan {
-width: 400px;
-}
-.nan1 {
-width: 850px;
-/* clear: both; */
-}
-}
-
-@media screen and (max-width:767px) {
-body {
-    background-color: yellow;
-}
-
-.nan {
-width: 400px;
-}
-.nan1 {
-width: 400px;
-}
-}
