--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ font-size: 125%;
 margin-bottom: 0;
 margin-top: 0;
 padding: 5px;
-background-color: #FF1439;
+background-color: blue;
 }
 
 #chicken {
@@ -59,7 +59,7 @@ color: black;
 margin-bottom: 0;
 margin-top: 0;
 padding: 5px;
-background-color: #FFFF00;
+background-color: red;
 
 }
 #sushi {
@@ -72,7 +72,7 @@ font-weight: bold;
 font-size: 125%;
 margin-bottom: 0;
 margin-top: 0;
-background-color: skyblue;
+background-color: orange;
 color: black;
 padding: 5px;
 }
