--- a/style.css
+++ b/style.css
@@ -1,169 +1,60 @@
-* {
-box-sizing: border-box;
+h4 {
+  color: white;
 }
 
-h1 {
-text-align: center;
-
+#header {
+  background-color: lightblue;
+  display: grid;
+  grid-template-columns: repeat(4 1fr);
+  grid-template-rows: repeat(4 1fr);
+  height: 75vh;
+  text-align: center;
+  padding-top: 11em;
 }
-.container {
-border: none;
-margin-top: 10px;
-margin-bottom: 10px;
-margin-left: auto;
-margin-right: auto;
-padding: 10px;
-float: left;
-}
+#interests {background: #f0e9d7;}
 
-section {
-width: 100%;
-height: 225px;
-border: 1px solid black;
-padding-top: 0px;
-background-color: gray;
-color: white;
-font-family: sans-serif;
-
-
-}
-
-p {
-padding: 5px;
-margin: 0;
-}
-
-#beef {
-border: 1px solid black;
-text-align: center;
-width: 30%;
-margin-left: 70%;
-font-family: Georgia,sans-serif;
-font-weight: bold;
-font-size: 125%;
-margin-bottom: 0;
-margin-top: 0;
-padding: 5px;
-background-color: blue;
-}
-
-#chicken {
-border: 1px solid black;
-text-align: center;
-width: 30%;
-margin-left: 70%;
-font-family: Georgia,sans-serif;
-font-weight: bold;
-font-size: 125%;
-color: black;
-margin-bottom: 0;
-margin-top: 0;
-padding: 5px;
-background-color: red;
-
-}
-#sushi {
-border: 1px solid black;
-text-align: center;
-width: 30%;
-margin-left: 70%;
-font-family: Georgia,sans-serif;
-font-weight: bold;
-font-size: 125%;
-margin-bottom: 0;
-margin-top: 0;
-background-color: orange;
-color: black;
-padding: 5px;
-}
-.row {
-width: 100%;
+.myGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: 5px;
 }
 
 
-@media screen and (min-width:992px) {
-.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
+/* .myGrid img {
+  height: 200px;
+  width: 75%;
+  margin-left: 40px;
+} */
+
+@media (max-width:768px) {
+  .myGrid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      grid-gap: 10px;
+  }
+  .mySubGrid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+      grid-gap: 15px;
   }
 
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
 }
 
-@media screen and(min-width:768px) and (max-width:991px) {
-.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
+@media (max-width:576px) {
+  .myGrid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(3, auto);  
+      grid-gap: 10px;
+  }
+  .mySubGrid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(3, auto);
+
   }
 
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
 }
-
