--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h4 {
   margin-left: 40px;
 } */
 
-@media (max-width:768px) {
+/* @media (max-width:768px) {
   .myGrid {
       display: grid;
       grid-template-columns: repeat(1, 1fr);
@@ -46,7 +46,7 @@ h4 {
       grid-gap: 15px;
   }
 
-}
+} */
 
 @media (max-width:576px) {
   .myGrid {
@@ -136,3 +136,12 @@ h4 {
   
 }
 
+#form{
+  display: flex;
+  justify-content: center;
+  width: 100%!important;
+}
+
+/* #form-text{
+  width: 100%!important;
+} */
